# xsf-math

./: .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
docs/: README.md  日志与可观测性.md  架构与构建分析.md  模块依赖图谱.md  集成指南.md  验证体系.md
docs/knowledge/: Marcum-Swerling探测.md  坐标系统与变换.md  杀伤效能与Pk.md  比例导引.md  气动与飞行.md  轨道力学.md  雷达信号处理.md
docs/算法层/: README.md  模块依赖图谱.md  算法链路与逻辑详解.md
docs/算法层/专题知识/: 引信与PCA.md  比例导引.md  气动与飞行.md  跟踪与滤波.md  雷达信号处理.md  雷达散射截面与电磁散射.md
docs/算法层/交战与杀伤/: README.md  基础知识整理.md  引信与PCA.md  杀伤效能与Pk.md  比例导引.md
docs/算法层/基础支撑/: README.md  坐标系统与变换.md  基础知识整理.md
docs/算法层/感知与探测/: Marcum-Swerling探测.md  README.md  基础知识整理.md  雷达信号处理.md  雷达散射截面与电磁散射.md
docs/算法层/电子战/: README.md  基础知识整理.md  电子战.md
docs/算法层/跟踪估计/: README.md  基础知识整理.md  跟踪与滤波.md
docs/算法层/轨道动力学/: README.md  基础知识整理.md  轨道力学.md
docs/算法层/飞行与气动/: README.md  基础知识整理.md  气动与飞行.md
docs/行为层/: README.md  原子控制器总览.md  原生制导程序层.md  飞行行为工作流.md
docs/行为层/交战/: README.md  交战控制器总览.md  交战杀伤心智模型.md  交战状态机工作流.md
docs/行为层/感知/: README.md  传感器感知心智模型.md  感知控制器总览.md  感知调度与探测工作流.md
docs/行为层/电子战/: README.md  干扰分配与技术选通工作流.md  电子战心智模型.md  电子战控制器总览.md
docs/行为层/跟踪/: README.md  航迹管理工作流.md  跟踪估计心智模型.md  跟踪控制器总览.md
docs/行为层/轨道/: README.md  机动序列规划工作流.md  轨道机动心智模型.md  轨道机动控制器总览.md
docs/行为层/飞行/: README.md  原子控制器总览.md  原生制导程序层.md  飞行器飞行心智模型.md  飞行行为工作流.md
examples/: CMakeLists.txt  behavior_chain_example.cpp  missile_engagement_example.cpp  orbital_example.cpp  radar_detection_example.cpp
include/xsf_behavior/: basic_controllers.hpp  flight_state.hpp  guidance_programs.hpp  xsf_behavior.hpp
include/xsf_behavior/engagement/: engagement_controller.hpp  fuze_controller.hpp  launch_computer.hpp  weapon_assignment.hpp
include/xsf_behavior/ew/: ew_technique_controller.hpp  jam_assignment.hpp
include/xsf_behavior/flight/: basic_controllers.hpp  flight_state.hpp  guidance_programs.hpp
include/xsf_behavior/orbital/: maneuver_planner.hpp
include/xsf_behavior/sensor/: detection_controller.hpp  sensor_schedule.hpp
include/xsf_behavior/tracking/: track_initiator.hpp  track_manager.hpp
include/xsf_common/: log.hpp  log_config.hpp  validation_artifacts.hpp
include/xsf_math/: xsf_math.hpp
include/xsf_math/aero/: aerodynamics.hpp
include/xsf_math/comms/: datalink.hpp
include/xsf_math/core/: atmosphere.hpp  constants.hpp  coordinate_transform.hpp  interpolation.hpp  mat3.hpp  quaternion.hpp  rcs.hpp  vec3.hpp
include/xsf_math/domains/: electronic_warfare.hpp  engagement.hpp  flight_dynamics.hpp  foundation.hpp  mission_systems.hpp  orbital_dynamics.hpp  perception.hpp  tracking.hpp
include/xsf_math/ew/: deception.hpp  electronic_warfare.hpp  esm_elint.hpp
include/xsf_math/flight/: basic_controllers.hpp  dubins.hpp  flight_state.hpp  guidance_programs.hpp  six_dof.hpp
include/xsf_math/guidance/: guidance_decoupling.hpp  pip_guidance.hpp  proportional_nav.hpp  seeker.hpp
include/xsf_math/lethality/: fragmentation.hpp  fuze.hpp  launch_pk_table.hpp  pk_model.hpp  vulnerability.hpp
include/xsf_math/navigation/: gps_ins.hpp
include/xsf_math/orbital/: j2.hpp  kepler.hpp  lambert.hpp  maneuvers.hpp  reentry.hpp  sgp4.hpp
include/xsf_math/radar/: antenna.hpp  cfar.hpp  clutter.hpp  infrared.hpp  marcum_swerling.hpp  propagation.hpp  radar_equation.hpp
include/xsf_math/rcs/: simple_geometries.hpp
include/xsf_math/sonar/: sonar.hpp
include/xsf_math/tracking/: advanced_association.hpp  extended_kalman_filter.hpp  interacting_multiple_model.hpp  kalman_filter.hpp  nonlinear_filters.hpp  track_association.hpp
tests/: CMakeLists.txt  test_algorithm_io.cpp  test_core.cpp  test_flight.cpp  test_guidance.cpp  test_guidance_programs.cpp  test_log.cpp  test_radar.cpp  test_roadmap_features.cpp  test_tracking_identity.cpp
tests/data/: algorithm_io_cases.txt
tests/data/pk_tables/: sample_launcher_target.pk  sample_launcher_target_fast.pk  sample_launcher_target_high.pk  sample_launcher_target_high_fast.pk
tools/validation/: build_report.py  cases.json  run_cases.py
